--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -101,6 +101,10 @@
 
 \end{table}
 
+\clearpage
+
+\footnotetext[1]{Die Kristall-Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
+
 \begin{table}[!h]
   \centering
   \caption{Struktur der Silizium-CVD-Precursormoleküle}
@@ -136,6 +140,7 @@
     Kristallstruktur                                       & corundum                                 & \cite{haynes_crc_2011} S.4-146      \\
     Gitterkonstante $a$                                    & \SI{4.7591}{\angstrom}                   & \cite{haynes_crc_2011} S.4-146      \\
     Gitterkonstante $c$                                    & \SI{12.9894}{\angstrom}                  & \cite{haynes_crc_2011} S.4-146      \\
+    Bindungslänge $r_\text{bond}$ & \SI{1.90}{\angstrom}                   & berechnet\footnotemark[1]      \\
     \hline
   \end{tabularx}
 
