--- a/md.tex
+++ b/md.tex
@@ -173,7 +173,7 @@ Tabelle~\ref{tab:mdsoftware} stellt ausgewählte Vertreter moderner Molekulardyn
   \label{tab:mdsoftware}
   \begin{tabularx}{\textwidth}{|llX|}
     \hline
-    \textbf{Paket}                                                               & \textbf{Autor/Rechteinhaber}   & \textbf{Beschränkungen \& Kommentare}                            \\
+    \textbf{Paket}                                                               & \textbf{Rechteinhaber}   & \textbf{Beschränkungen \& Kommentare}                            \\
     \hline
     LAMMPS\cite{plimpton_lammps_2014,plimpton_fast_1995}                         & Sandia                   & quelloffen, Kommandozeile, Bibliothek, eigene Potentiale möglich \\
     Materials Studio\cite{biovia_materials_2014}                                 & BIOVIA                   & Grafische Oberfläche, lizenzpflichtig                            \\
