--- a/runtime.tex
+++ b/runtime.tex
@@ -75,7 +75,7 @@ Somit bestimmt sich $p_\text{max}$ als Minimum der beiden oberen Schranken $p_\t
 \subsection{Workerdichte \texorpdfstring{$\rho_\text{worker}$}{rhoworker}}
 
 Ein Parsivald-spezifisches Leistungsmaß ergibt sich mit der Workerdichte, welche das Verhältnis der mittleren Anzahl der aktiven Worker $p-1$ zur maximalen Zahl gleichzeitiger Ereignisse im Simulationsraum $p_\text{max,1}-1$ beschreibt und somit auch für verschiedene Kraftfelder und Substratgrößen vergleichbar ist.
-Aufgrund der stochastischen Verteilung der Ereignisorte werden in Simulationsläufen nur zwischen \SI{10}{\percent} und \SI{40}{\percent} für $\rho_\text{worker}$ erreicht (Siehe Anhang~\ref{appendix_rsamaxdensity}).
+Aufgrund der stochastischen Verteilung der Ereignisorte werden in Simulationsläufen nur zwischen \SI{10}{\percent} und \SI{40}{\percent} für $\rho_\text{worker}$ erreicht (siehe Anhang~\ref{appendix_rsamaxdensity}).
 \begin{equation}
   \rho_\text{worker} = \frac{p - 1}{p_\text{max,1} - 1}
   \label{eq:workerdensity}
