--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -220,8 +220,8 @@ Die Temperatur wurde als Kompromiss mit \SI{1300}{\kelvin} bewusst sehr hoch gew
 Die langen Laufzeiten ergeben sich als Resultat der ReaxFF-Kraftfelder, welche im Vergleich mit anderen Kraftfeldern um ein Vielfaches rechenaufwendiger sind und auch für die mittlere Zahl von \num{1511} Atomen pro Ereignis lange Laufzeiten verursachen.
 Deshalb sind mit ihnen aber auch reine MD-Simulationen auf der hier vorgestellten Größenordnung praktisch nicht realisierbar, wobei für Parsivald eine effiziente Größe von $w_\text{eff} = \SI{539}{\nano\meter}$ mit $p_\text{max} = \num{2335}$ bei $\rho_\text{worker} = \SI{11}{\percent}$ berechnet wurde.
 
-Das Ergebnis der Abscheidungssimulation ist eine amorphe Siliziumschicht, die mit konstanter Rate wächst.
-Aufgrund von sich langsam verstärkenden Oberflächenunebenheiten nimmt hier die Rauheit beim Wachstum zu (Abbildung~\ref{fig:siliconresults}).
+Das Ergebnis der Abscheidungssimulation ist eine amorphe Siliziumschicht, die mit konstanter Rate wächst  (Abbildung~\ref{fig:siliconresults}).
+Aufgrund von sich verstärkenden Oberflächenunebenheiten steigt die Rauheit der Schicht abschnittsweise linear.
 Die Simulationen wurden für die Abscheidungen auf den Kristallebenen (001), (011)- und (111) wiederholt, zeigten aber keine Veränderung der Ergebnisse.
 In der RDF der Schicht (Abbildung~\ref{fig:siliconresults-b}) ist das kristalline Substrat in Form von Spitzen erkennbar, doch zeigen sich ansonsten Charakteristika einer amorphen Struktur.
 
