--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -16,7 +16,7 @@ Aus der radialen Verteilungsfunktion wurde anschließend die Bindungslänge und 
 Bei diesem Prozess bleibt die Kristallstruktur erhalten und steht in guter Übereinstimmung mit den Literaturwerten.
 Somit unterstützt die genutzte EAM-Para\-metri\-sierung das Zielsystem hinsichtlich der Dichte und Struktur monokristalliner Bulkmaterialien.
 
-\begin{table}[hbt]
+\begin{table}[t]
   \begin{threeparttable}
   \oddrowcolors
   \caption[Vergleich der strukturellen Eigenschaften von Gold mit Literaturdaten]{
@@ -43,16 +43,7 @@ Somit unterstützt die genutzte EAM-Para\-metri\-sierung das Zielsystem hinsicht
 \subsection{Thermodynamische Eigenschaften}
 \label{goldthermo}
 
-Neben strukturellen Eigenschaften bilden EAM-Potentiale auch einige thermodynamische Eigenschaften von Metallen ab, von denen aufgrund der potentiell hohen Substrattemperaturen bei PVD-Prozessen\cite{gottsche_uber_1956} anhand der Dichte der Phasenübergang an der Schmelztemperatur untersucht werden soll.
-Dafür wurde in MD-Simulationen ein Gold-Kristall mit einer Größe von \SI{40x40x40}{\angstrom} schrittweise von \SI{50}{\kelvin} auf \SI{2000}{\kelvin} im isotherm-isobaren Ensemble erwärmt, wobei der Schmelzpunkt bei \SI{1337}{\kelvin}\cite{haynes_crc_2011} überschritten wurde.
-Die Relaxationszeit $t_\text{relax}$ nach jedem Temperaturschritt von \SI{50}{\kelvin} und die Thermostat-Dämpfung $\tau$ wurden dabei variiert, um ihren Einfluss auf die Aussagekraft der Simulation zu untersuchen.
-
-Die Ergebnisse zeigen gute Übereinstimmung mit experimentellen Daten\cite{haynes_crc_2011,brillo_density_2006} (Abbildung~\ref{fig:goldthermo}), wofür Relaxationszeiten $t_\text{relax} > \SI{20}{\pico\second}$ und Thermostat-Dämpfungsparameter $\tau = \SI{20}{\femto\second}$ bei einer Zeitschrittweite von $\Delta t = \SI{1}{\femto\second}$ für die Relaxation im isotherm-isobaren Ensemble als notwendig ermittelt wurden.
-Bei geringeren $t_\text{relax}$ oder $\tau$ relaxiert das System innerhalb eines Temperaturschrittes nicht vollständig, wodurch der Schmelzpunkt überschätzt wird (Abbildung~\ref{fig:goldthermo-b}).
-Darin zeigt sich auch eine Änderung in der Art des Phasenüberganges, der durch erhöhte Relaxationszeiten aufgrund von zeitlichen Effekten verzögert eintritt.
-Das ergibt sich aus der Ähnlichkeit der Relaxationszeit zur Barostat-Dämpfung ($t_\text{relax}\approx \tau_p$), welche um Größenordnungen unter dem notwendigen Wert liegen (Abschnitt~\ref{mdmethods}), sodass sich das thermische Gleichgewicht nicht im Zeitrahmen der Simulation einstellen kann.
-
-\begin{figure}[tbh]
+\begin{figure}[b!]
 
   \centering
   \captionsetup[subfigure]{singlelinecheck=false}
@@ -79,8 +70,17 @@ Das ergibt sich aus der Ähnlichkeit der Relaxationszeit zur Barostat-Dämpfung 
   \label{fig:goldthermo}
 \end{figure}
 
+Neben strukturellen Eigenschaften bilden EAM-Potentiale auch einige thermodynamische Eigenschaften von Metallen ab, von denen aufgrund der potentiell hohen Substrattemperaturen bei PVD-Prozessen\cite{gottsche_uber_1956} anhand der Dichte der Phasenübergang an der Schmelztemperatur untersucht werden soll.
+Dafür wurde in MD-Simulationen ein Gold-Kristall mit einer Größe von \SI{40x40x40}{\angstrom} schrittweise von \SI{50}{\kelvin} auf \SI{2000}{\kelvin} im isotherm-isobaren Ensemble erwärmt, wobei der Schmelzpunkt bei \SI{1337}{\kelvin}\cite{haynes_crc_2011} überschritten wurde.
+Die Relaxationszeit $t_\text{relax}$ nach jedem Temperaturschritt von \SI{50}{\kelvin} und die Thermostat-Dämpfung $\tau$ wurden dabei variiert, um ihren Einfluss auf die Aussagekraft der Simulation zu untersuchen.
+
+Die Ergebnisse zeigen gute Übereinstimmung mit experimentellen Daten\cite{haynes_crc_2011,brillo_density_2006} (Abbildung~\ref{fig:goldthermo}), wofür Relaxationszeiten $t_\text{relax} > \SI{20}{\pico\second}$ und Thermostat-Dämpfungsparameter $\tau = \SI{20}{\femto\second}$ bei einer Zeitschrittweite von $\Delta t = \SI{1}{\femto\second}$ für die Relaxation im isotherm-isobaren Ensemble als notwendig ermittelt wurden.
+Bei geringeren $t_\text{relax}$ oder $\tau$ relaxiert das System innerhalb eines Temperaturschrittes nicht vollständig, wodurch der Schmelzpunkt überschätzt wird (Abbildung~\ref{fig:goldthermo-b}).
+Darin zeigt sich auch eine Änderung in der Art des Phasenüberganges, der durch erhöhte Relaxationszeiten aufgrund von zeitlichen Effekten verzögert eintritt.
+Das ergibt sich aus der Ähnlichkeit der Relaxationszeit zur Barostat-Dämpfung ($t_\text{relax}\approx \tau_p$), welche um Größenordnungen unter dem notwendigen Wert liegen (Abschnitt~\ref{mdmethods}), sodass sich das thermische Gleichgewicht nicht im Zeitrahmen der Simulation einstellen kann.
+
 Somit lässt sich Gold mit der verwendeten EAM-Parametrisierung bei verschiedenen Temperaturen zuverlässig beschreiben, sofern die Relaxationszeit ausreichend groß eingestellt ist.
-Für Parsivald-Rechnungen sind durch Nutzung der nur teilperiodischen Räume keine Barostate notwendig, wodurch die Relaxationszeit lediglich die schnelleren Temperatur-Oszillationen, die vom Thermostat verursacht werden, abdecken muss.
+Für Parsivald-Rechnungen sind durch Nutzung der nur teilperiodischen Räume keine Barostate notwendig, wodurch die Relaxationszeit lediglich die kürzeren Perioden der Temperatur-Oszillationen, die vom Thermostat verursacht werden, abdecken muss.
 In den nachfolgenden Simulationen mit EAM-Potentialen wird deshalb $t_\text{relax} = 5 \tau$ gewählt.
 
 \subsection{Simulation von Gold-PVD}
@@ -92,16 +92,7 @@ Zur Korrektur dieses systematischen Fehlers wäre eine Aufteilung des Zeit-Integ
 Wie im vorherigen Abschnitt untersucht, hat die Temperatur in der MD-Simulation keinen Einfluss auf die grundlegende Struktur, weshalb eine leichte Überschätzung der Teilchenenergie und der damit einhergehenden Temperatur nach Auftreffen des Teilchens toleriert wird.
 Ein mögliches Problem besteht hier in dem Herausschlagen von Teilchen aus der Oberfläche, allerdings sind die Energie dafür unterhalb typischer Sputter-Energien im Bereich mehrerer \SI{}{\kilo\electronvolt}\cite{mattox_handbook_2010}, mit denen Teilchen auf dem Target auftreffen und die in dieser Simulation betrachteten Atome heraus schlagen.
 
-Die Simulationen zeigen epitaktisches Wachstum von Gold-Schichten (Abbildungen~\ref{fig:goldsmooth-a} und~\ref{fig:golddepositions-d}) mit einer RMS-Rauheit (Root Mean Square, Standardabweichung) von \SI{1.2}{\angstrom}, die somit unterhalb der Bindungslänge von \SI{2.884}{\angstrom} liegt und über den Simulationszeitraum konstant bleibt (Abbildung~\ref{fig:goldsmooth-b}).
-Experimentelle Werte zur Rauheit von epitaktisch abgeschiedenen Gold-Filmen wurden nicht gefunden werden, doch liegen die simulierten Werte unterhalb der Rauheit von \SIrange{11}{18}{\nano\meter} für polykristalline Schichten, die per PVD auf Glas-Substraten abgeschieden wurden\cite{svorcik_annealing_2011}.
-Diese sind allerdings durch die Bildung von Goldpartikel dominiert, wohingegen die simulierten Atome bereits auf perfekten monokristallinen Strukturen auftreffen.
-Da Gold auch auf anderen Kristallstrukturen und ungeordneten Substraten eine Affinität zu kristallinem Wachstum zeigt\cite{gottsche_uber_1956,everitt_evolution_2000}, wirken die Ergebnisse der Parsivald-Simulation plausibel.
-Eine Untersuchung amorpher und polykristalliner Substrate wäre für bessere Vergleichbarkeit mit Experimenten\cite{adamov_electrical_1974} interessant, übersteigt jedoch den Rahmen der Arbeit.
-Poren und Hohlräume wurden bei Untersuchungen per Alpha-Form (Abschnitt~\ref{mdmethods-surface}) nicht gefunden, sodass die Gold-Atome in einem perfekten fcc-Gitter arrangiert sind.
-
-Ergänzend wurde zur Prüfung der Robustheit des Parsivald-Prozesses nanostrukturierte Substrate in Form von \SI{1}{\nano\meter} breiten Lamellen und Säulen vorbereitet, auf welchen sich nach kurzer Simulationszeit glatte Schichten gebildet haben, die keine Unterschiede zu den Schichten auf dem glatten Substrat zeigen.
-
-\begin{figure}[thp]
+\begin{figure}[t]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
@@ -124,6 +115,15 @@ Ergänzend wurde zur Prüfung der Robustheit des Parsivald-Prozesses nanostruktu
 
 \end{figure}
 
+Die Simulationen zeigen epitaktisches Wachstum von Gold-Schichten (Abbildungen~\ref{fig:goldsmooth-a} und~\ref{fig:golddepositions-d}) mit einer RMS-Rauheit (Root Mean Square, Standardabweichung) von \SI{1.2}{\angstrom}, die somit unterhalb der Bindungslänge von \SI{2.884}{\angstrom} liegt und über den Simulationszeitraum konstant bleibt (Abbildung~\ref{fig:goldsmooth-b}).
+Experimentelle Werte zur Rauheit von epitaktisch abgeschiedenen Gold-Filmen wurden nicht gefunden werden, doch liegen die simulierten Werte unterhalb der Rauheit von \SIrange{11}{18}{\nano\meter} für polykristalline Schichten, die per PVD auf Glas-Substraten abgeschieden wurden\cite{svorcik_annealing_2011}.
+Diese sind allerdings durch die Bildung von Goldpartikel dominiert, wohingegen die simulierten Atome bereits auf perfekten monokristallinen Strukturen auftreffen.
+Da Gold auch auf anderen Kristallstrukturen und ungeordneten Substraten eine Affinität zu kristallinem Wachstum zeigt\cite{gottsche_uber_1956,everitt_evolution_2000}, wirken die Ergebnisse der Parsivald-Simulation plausibel.
+Eine Untersuchung amorpher und polykristalliner Substrate wäre für bessere Vergleichbarkeit mit Experimenten\cite{adamov_electrical_1974} interessant, übersteigt jedoch den Rahmen der Arbeit.
+Poren und Hohlräume wurden bei Untersuchungen per Alpha-Form (Abschnitt~\ref{mdmethods-surface}) nicht gefunden, sodass die Gold-Atome in einem perfekten fcc-Gitter arrangiert sind.
+
+Ergänzend wurde zur Prüfung der Robustheit des Parsivald-Prozesses nanostrukturierte Substrate in Form von \SI{1}{\nano\meter} breiten Lamellen und Säulen vorbereitet, auf welchen sich nach kurzer Simulationszeit glatte Schichten gebildet haben, die keine Unterschiede zu den Schichten auf dem glatten Substrat zeigen.
+
 \subsubsection{Simulation von Abscheidungen auf strukturierten Substraten}
 
 Neben der Abscheidung auf glatten Substraten wurden am Beispiel der Gold-PVD auch Abscheidungen auf strukturierten Substraten mit identischen Prozessbedingungen simuliert (Abbildung~\ref{fig:golddepositions}).
@@ -131,7 +131,7 @@ Dafür wurden Substrate präpariert, welche die Form von Schwellen oder Spitzen 
 Auf vorherige Relaxierung der Substrate wurde aufgrund der Stabilität sowie der relaxierenden Eigenschaften der MD-Ereignisse verzichtet.
 Dadurch können sich an den Wänden der Schwellen und Spitzen auch ungünstige Schnitte durch die Einheitszellen ergeben, die in den weiteren Untersuchungen aber nicht maßgeblich für die Struktur der abgeschiedenen Schichten sind.
 
-\begin{figure}
+\begin{figure}[t]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
@@ -154,17 +154,7 @@ Dadurch können sich an den Wänden der Schwellen und Spitzen auch ungünstige S
 
 \end{figure}
 
-Die Schichtdicken aus den Abscheidungssimulationen auf strukturierten Substraten unterscheiden sich nicht signifikant von den für glatte Substrate gewonnenen Werten, mit Ausnahme der \SI{90}{\degree}-Strukturen.
-Die abgeschiedenen Schichten wachsen ebenfalls epitaktisch auf, bilden aber Hohlräume und Nanoporen, wodurch sich kein perfekter Kristall ergibt.
-In der Rauheit bestehen Unterschiede zur Simulation von Abscheidungen auf glatten Substraten (\SI{0}{\degree}) in einer generell erhöhten Rauheit, die für geringe Neigungswinkel allerdings konstant bleibt.
-
-Für extreme Neigungswinkel von \SI{90}{\degree} ist eine Zunahme der Rauheit zu beobachten, welche durch die Bildung von Nanoporen an der Basis der Spitzen und Schwellen in der Simulation verursacht wird (Abbildung~\ref{fig:goldpockets}).
-Dabei handelt es sich um ein Artefakt der Oberflächensuche der Parsivald-Simulation, die von oben eine senkrechte Suche nach dem höchsten Punkt in der xy-Ebene durchführt.
-Somit werden an geneigten Flächen höher gelegene Abscheidungsorte mit größeren Neigungen bevorzugt, wobei oberhalb von \SI{90}{\degree} von einer vollständigen Abschirmung eines Teils der Oberfläche auszugehen ist.
-Dadurch bilden sich Nanoporen an der Basis von Spitzen und Schwellen, die sich im weiteren Verlauf der Simulationen verengen, bis sie schließlich zu Hohlräumen abgeschlossen werden.
-In der Auswertung macht sich der Abschluss durch einen rapiden Abfall der Rauheit bemerkbar, die sich aus der Eigenschaft der Alpha-Form ergibt, die gesamte Nanopore als Teil der Oberfläche anzusehen, sodass nach ihrer Schließung die mittlere Höhe der Oberfläche schlagartig zunimmt.
-
-\begin{figure}
+\begin{figure}[p]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.31\textwidth}
   \begin{subfigure}[t]{\subfigwidth}
@@ -213,7 +203,7 @@ In der Auswertung macht sich der Abschluss durch einen rapiden Abfall der Rauhei
   \label{fig:golddepositions}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[p]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
@@ -234,13 +224,25 @@ In der Auswertung macht sich der Abschluss durch einen rapiden Abfall der Rauhei
   \label{fig:goldpockets}
 \end{figure}
 
+Die Schichtdicken aus den Abscheidungssimulationen auf strukturierten Substraten unterscheiden sich nicht signifikant von den für glatte Substrate gewonnenen Werten, mit Ausnahme der \SI{90}{\degree}-Strukturen.
+Die abgeschiedenen Schichten wachsen ebenfalls epitaktisch auf, bilden aber Hohlräume und Nanoporen, wodurch sich kein perfekter Kristall ergibt.
+In der Rauheit bestehen Unterschiede zur Simulation von Abscheidungen auf glatten Substraten (\SI{0}{\degree}) in einer generell erhöhten Rauheit, die für geringe Neigungswinkel allerdings konstant bleibt.
+
+Für extreme Neigungswinkel von \SI{90}{\degree} ist eine Zunahme der Rauheit zu beobachten, welche durch die Bildung von Nanoporen an der Basis der Spitzen und Schwellen in der Simulation verursacht wird (Abbildung~\ref{fig:goldpockets}).
+Dabei handelt es sich um ein Artefakt der Oberflächensuche der Parsivald-Simulation, die von oben eine senkrechte Suche nach dem höchsten Punkt in der xy-Ebene durchführt.
+Somit werden an geneigten Flächen höher gelegene Abscheidungsorte mit größeren Neigungen bevorzugt, wobei oberhalb von \SI{90}{\degree} von einer vollständigen Abschirmung eines Teils der Oberfläche auszugehen ist.
+Dadurch bilden sich Nanoporen an der Basis von Spitzen und Schwellen, die sich im weiteren Verlauf der Simulationen verengen, bis sie schließlich zu Hohlräumen abgeschlossen werden.
+In der Auswertung macht sich der Abschluss durch einen rapiden Abfall der Rauheit bemerkbar, die sich aus der Eigenschaft der Alpha-Form ergibt, die gesamte Nanopore als Teil der Oberfläche anzusehen, sodass nach ihrer Schließung die mittlere Höhe der Oberfläche schlagartig zunimmt.
+
 \subsection{Skalierbarkeit mit der Simulationsgröße}
 \label{goldscalability}
 
-\begin{table}[b!]
+\begin{table}[t]
   \begin{threeparttable}
 
-    \caption{Laufzeitgrößen von Parsivald für Gold-PVD}
+    \caption[Laufzeitgrößen von Parsivald für Gold-PVD]{
+      Laufzeitgrößen von Parsivald für Gold-PVD bei unterschiedlichen $w_\text{sim}$
+    }
     \label{tab:goldscalability}
 
     \begin{tabularx}{\textwidth}{|Xrrrrrrr|}
@@ -278,7 +280,7 @@ Sofern nicht anders angegeben, wurden die Hauptprozesse auf den schnellen Xeon-K
 Aus Messungen ergeben sich die elementaren Laufzeiten als $T_\text{E} = \SI{26}{\milli\second}$ und $T_\text{MD} = \SI{4.7}{\second}$, während $w_\text{MD} = \SI{37}{\angstrom}$ fest gewählt und $w_\text{sim}$ von \SI{106}{\angstrom} bis \SI{4}{\micro\meter} variiert wurde, wobei auch der für die Beschichtung von Nanoelektronik interessante Bereich von \SIrange{100}{1000}{\nano\meter} untersucht wurde.
 Dabei wurde, durch verschiedene Störeinflüsse bedingt, eine unterschiedliche Anzahl an Parsivald-Zyklen durchlaufen, sodass die Laufzeiten keinen direkten Vergleich zulassen.
 
-Die Ergebnisse der Untersuchungen sind in Tabelle~\ref{tab:goldscalability} zusammengefasst und stimmen gut mit den in Abschnitt~\ref{runtimeanalysis} ermittelten analytischen Werten überein (Abbildung~\ref{fig:goldscala}).
+Die Ergebnisse der Untersuchungen der Laufzeitgrößen sind in Tabelle~\ref{tab:goldscalability} zusammengefasst und stimmen gut mit den in Abschnitt~\ref{runtimeanalysis} ermittelten analytischen Werten überein (Abbildung~\ref{fig:goldscala}).
 Die Zahl der möglichen Prozesse (Abbildung~\ref{fig:goldscala-workers}) steht für $\rho_\text{worker}=\SI{20}{\percent}$ in guter Übereinstimmung mit $p_\text{max}$, wobei die maximale effiziente Substratbreite als $w_\text{eff} \approx \SI{100}{\nano\meter}$ ermittelt wurde.
 Für die mit $p_\text{max}$ verwandten Workerdichten $\rho_\text{worker}$ ist eine leichte Abnahme von \SI{21.9}{\percent} für $w_\text{sim} = \SI{106}{\angstrom}$ zu \SI{10.3}{\percent} für $w_\text{sim} = \SI{1000}{\angstrom}$ erkennbar, die danach jedoch quadratisch mit der Substratbreite abnimmt.
 Es existiert ein Ausreißer bei $w_\text{sim} = \SI{1}{\micro\meter}$, für den nur 46 Worker gestartet wurden ($\num{46} < p_\text{max} \approx \num{190}$), die zudem durch einen inzwischen behobenen Fehler im Host-Worker-Code auf einen Wert von \num{25.4} unterschätzt wurden.
