Feierabend. Morgen wird gedruckt

--- a/appendix_runtime.tex
+++ b/appendix_runtime.tex
@@ -77,7 +77,7 @@ Da mit der Vergrößerung der MD-Boxen auch die gesamte Laufzeit nahezu proporti
 Bei Random Sequential Adsorption (RSA) werden geometrische Objekte nichtüberlappend an zufälligen Positionen in einem Raum verteilt, bis kein weiteres Objekt platziert werden kann.
 Die Verteilung der quadratischen Worker auf der Oberfläche geschieht auf eine ähnliche Weise, sodass als Grenzwert der Workerdichte \SI{56.2}{\percent}\cite{brosilow_random_1991} angegeben werden kann.
 
-Da Parsivald die Ereignisorte mit KMC-Methoden wählt, muss die zeitliche Reihenfolge der Ereignisse eingehalten werden, weshalb die überdeckenden Ereignisse nicht verworfen werden, sondern bis zum Abschluss des überdeckten Ereignisses zurück gestellt werden und sich so ein kompletter Abhängigkeitsbaum aufbaut, wie er in meiner Bachelorarbeit wird\cite{lorenz_entwicklung_2012}.
+Da Parsivald die Ereignisorte mit KMC-Methoden wählt, muss die zeitliche Reihenfolge der Ereignisse eingehalten werden, weshalb die überdeckenden Ereignisse nicht verworfen, sondern bis zum Abschluss des überdeckten Ereignisses zurück gestellt werden und sich so ein kompletter Abhängigkeitsbaum aufbaut, wie er in meiner Bachelorarbeit wird\cite{lorenz_entwicklung_2012}.
 Dadurch kollidieren die MD-Boxen zurückgestellter Ereignisse mit nachfolgenden Ereignissen, welche wiederum zurückgestellt werden müssen.
 Somit reduziert sich das Maximum der Workerdichte für große Simulationsräume auf den Grenzwert von \SI{25.95}{\percent} (Abbildung~\ref{fig:rsamaxdensity}).
 Dieser Wert wurde über eine modifizierte RSA-Simulation ermittelt, die auf diese Parsivald-Methode der Ereignisauswahl und -Durchführung angepasst wurde.
